Align login & registration views with wireframes + use correct bean to show registration errors

--- a/grails-app/assets/stylesheets/general.scss
+++ b/grails-app/assets/stylesheets/general.scss
@@ -112,8 +112,10 @@ fieldset {
 .alert {
   padding: 0 5px;
   &.alert-danger {
-    border:1px solid #ff8b8b;
-    background-color: #ffb7b9;
+    border:1px solid red;
+    border-radius: 10px;
+    color: red;
+    font-weight: bold;
   }
 }
 
